<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="betsaleel.setram.com.setrambank.dashboard"
    tools:showIn="@layout/activity_dashboard">

    <TabHost
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/TabHost02"
        android:background="@color/colorBase"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white">

                <LinearLayout android:orientation="vertical"
                    android:id="@+id/tab_list_transact"
                    android:scrollbars="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView android:textSize="25dp"
                        android:textColor="@android:color/black"
                        android:id="@+id/tvHeaderTransacts"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lstTransacts" />
                    <ListView android:id="@+id/listView_transact"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout android:orientation="vertical"
                    android:id="@+id/tab_list_agence"
                    android:scrollbars="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView android:textSize="25dp"
                        android:textColor="@android:color/black"
                        android:id="@+id/tvHeaderAgencies"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lstagencies" />

                    <ListView android:id="@+id/listView_agency"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout android:orientation="vertical"
                    android:id="@+id/tab_list_tarif" android:scrollbars="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView android:textSize="25dp"
                        android:textColor="@android:color/black"
                        android:id="@+id/tvHeaderTarifs"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lsttarifs" />
                    <ListView android:id="@+id/listView_tarifs"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>


                <LinearLayout android:orientation="vertical"
                    android:id="@+id/tab_list_params"
                    android:scrollbars="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView android:textSize="25dp"
                        android:textColor="@android:color/black"
                        android:id="@+id/tvHeaderParam"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lstparam" />
                    <ListView android:id="@+id/listView_param"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </TabHost>
</android.support.constraint.ConstraintLayout>
