<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="betsaleel.setram.com.setrambank.HomeActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/appbarLayout"
        app:elevation="0dp"
        >

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorBase"
            app:theme="@style/AppTheme.Toolbar"
            app:titleTextAppearance="@style/AppTheme.Toolbar.Title"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            />

    </android.support.design.widget.AppBarLayout>

    <TabHost
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/TabHost02"
        android:background="@color/colorBase"
        android:layout_below="@id/appbarLayout"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white">

                <LinearLayout android:orientation="vertical"
                    android:id="@+id/tab_list_transact"
                    android:scrollbars="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView android:textSize="25dp"
                        android:textColor="@android:color/black"
                        android:id="@+id/tvHeaderTransacts"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lstTransacts" />
                    <ListView android:id="@+id/listView_transact"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout android:orientation="vertical"
                    android:id="@+id/tab_list_agence"
                    android:scrollbars="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView android:textSize="25dp"
                        android:textColor="@android:color/black"
                        android:id="@+id/tvHeaderAgencies"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lstagencies" />

                    <ListView android:id="@+id/listView_agency"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout android:orientation="vertical"
                    android:id="@+id/tab_list_tarif" android:scrollbars="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView android:textSize="25dp"
                        android:textColor="@android:color/black"
                        android:id="@+id/tvHeaderTarifs"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lsttarifs" />
                    <ListView android:id="@+id/listView_tarifs"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>


                <LinearLayout android:orientation="vertical"
                    android:id="@+id/tab_list_params"
                    android:scrollbars="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView android:textSize="25dp"
                        android:textColor="@android:color/black"
                        android:id="@+id/tvHeaderParam"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lstparam" />
                    <ListView android:id="@+id/listView_param"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </TabHost>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:background="@color/colorBase"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        app:srcCompat="@android:drawable/ic_menu_send" />
</RelativeLayout>
